# lua-xz

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile.mingw  Makefile.msvc  README.md  lua-xz.def
.github/workflows/: ci.yml  publish.yml
ci-only-test/: xz-compress-copy-of-linux-kernel.lua  xz-decompress-linux-kernel.lua
docs/: README.md  liblzma-lua-xz-out-of-LuaRocks-MSVC.md  liblzma-lua-xz-out-of-LuaRocks-MinGW-MinGW-w64.md  liblzma-on-windows-for-Lua-MSVC.md  liblzma-on-windows-for-Lua-MSYS2.md  liblzma-on-windows-for-Lua-MinGW-MinGW-w64.md
rockspecs/: lua-xz-0.0.1-1.rockspec  lua-xz-dev-1.rockspec
samples/: compress-readme.lua  decompress-copy-of-readme.lua  lzma-compress-readme.lua  lzma-decompress-copy-of-readme.lua  lzma-simulate-compression-in-chunks.lua  simulate-compression-in-chunks.lua  test-constants.lua  test.lua  xz-compress-readme.lua  xz-decompress-copy-of-readme.lua  xz-simulate-compression-in-chunks.lua
src/: lua-xz.c  lua-xz.h
